crates/server-less/tests/fixtures/http_generic_impl.stderr
error: server-less macros do not yet support generic impl blocks — remove the type parameters or implement the trait manually; hint: consider using a concrete type, e.g. `impl MyService<ConcreteType> { ... }`
 --> tests/fixtures/http_generic_impl.rs:5:6
  |
5 | impl<T> Foo<T> {
  |      ^
